finishing touches partnerships

--- a/src/components/landingPage/activityText.astro
+++ b/src/components/landingPage/activityText.astro
@@ -48,7 +48,7 @@
       <div class="pb-20"></div>
 
       <p class="text-center text-dnt-orange-700 dark:text-dnt-orange-300">
-        Want to join the crew, sponsor us, or have any other questions? Send us
+        Want to join the crew, or have any other questions? Send us
         an email at <a
           href="mailto:info@dutchnaoteam.nl"
           class="text-black underline hover:text-dnt-orange-400 hover:decoration-wavy dark:text-white"
