--- a/src/components/partnershipsPage/introText.astro
+++ b/src/components/partnershipsPage/introText.astro
@@ -14,7 +14,7 @@ import cupSVG from "../../svgs/teacup_line.svg"
     >
       Partnerships
     </h1>
-    <div class = "flex flex-col align-center w-5/6 justify-between md:flex-row">
+    <div class = "flex flex-col items-baseline align-center w-5/6 justify-between md:flex-row">
       <div class ="flex flex-col items-center justify-center" id="connect">
         <img
         src={worldSVG}
@@ -58,5 +58,29 @@ import cupSVG from "../../svgs/teacup_line.svg"
         </p>
       </div>
     </div>
+  <!-- <img src="/images/Team_Complete.webp" width="800px" alt="DNT team image" /> -->
+</div>
+
+<div
+  class="bg-white lg:items-begin flex flex-col items-center justify-center pt-10"
+>
+    <h1
+      class="mb-4 text-center text-5xl font-bold dark:text-dnt-orange-400"
+    >
+      Interested?
+    </h1>
+    <div class="mb-3 flex items-center">
+      <h3
+        class="text-center text-3xl dark:text-dnt-orange-400 mr-3"
+      >
+        Hit us up for a cup of coffee.
+      </h3>
+      <img
+        src={cupSVG}
+        alt="SVG of a cup"
+        width="42"
+        >
+    </div>
+    <p class="mb-16 text-center text-xl dark:text-dnt-orange-400 text-partner-text inline-block	">partnerships@dutchnaoteam.nl </p>
   <!-- <img src="/images/Team_Complete.webp" width="800px" alt="DNT team image" /> -->
 </div>
