small fixes after rebase

--- a/src/components/navigation/navbar.astro
+++ b/src/components/navigation/navbar.astro
@@ -37,6 +37,7 @@ const navbarLinks: Array<{
   {
     pattern: new RegExp("^/partnerships"),
     href: "/partnerships",
+    position: "left",
     label: "Partnerships",
   },
   {
