--- a/src/components/partnershipsPage/introText.astro
+++ b/src/components/partnershipsPage/introText.astro
@@ -15,7 +15,7 @@ import cupSVG from "../../svgs/teacup_line.svg"
       Partnerships
     </h1>
     <div class = "flex flex-col items-baseline align-center w-5/6 justify-between md:flex-row">
-      <div class ="flex flex-col items-center justify-center" id="connect">
+      <div class ="flex flex-col items-center justify-center mt-3 md:mt-0" id="connect">
         <img
         src={worldSVG}
         alt="SVG of the world"
@@ -25,7 +25,7 @@ import cupSVG from "../../svgs/teacup_line.svg"
           From students to businesses, you will increase the network of your organization.
         </p>
       </div>
-      <div class ="flex flex-col items-center justify-center" id="give">
+      <div class ="flex flex-col items-center justify-center mt-3 md:mt-0" id="give">
         <img
         src={handSVG}
         alt="SVG representing giving"
@@ -35,30 +35,29 @@ import cupSVG from "../../svgs/teacup_line.svg"
           Together we will achieve better <span class="text-partner-text">education</span>, work on <span class="text-partner-text">research</span> and <span class="text-partner-text">innovate</span> in the field of robotics.
         </p>
       </div>
-      <div class ="flex flex-col items-center justify-center" id="code">
+      <div class ="flex flex-col items-center justify-center mt-3 md:mt-0" id="code">
         <img
         src={codeSVG}
         alt="SVG of code"
         >
         <p class="w-2/3 mt-5">
-          Technology is the basis of our society. In collaberating with us,
+          Technology is the basis of our society. In collaborating with us,
           your organization will support new <span class="text-partner-text">technologies</span>
           that can change our way of living.
         </p>
       </div>
-      <div class ="flex flex-col items-center justify-center" id="pin">
+      <div class ="flex flex-col items-center justify-center mt-3 md:mt-0" id="pin">
         <img
         src={pinSVG}
         alt="SVG of the world"
         >
         <p class="w-2/3 mt-5">
-          Put your organization in the <span class="text-partner-text">spot-light</span> at
+          Put your organization in the <span class="text-partner-text">spotlight</span> at
           important events. Make sure the name of your organization is known accross the sector of
-          <span class="text-partner-text">robotics</span> by collaberating with us.
+          <span class="text-partner-text">robotics</span> by collaborating with us.
         </p>
       </div>
     </div>
-  <!-- <img src="/images/Team_Complete.webp" width="800px" alt="DNT team image" /> -->
 </div>
 
 <div
@@ -80,7 +79,8 @@ import cupSVG from "../../svgs/teacup_line.svg"
         alt="SVG of a cup"
         width="42"
         >
-    </div>
-    <p class="mb-16 text-center text-xl dark:text-dnt-orange-400 text-partner-text inline-block	">partnerships@dutchnaoteam.nl </p>
-  <!-- <img src="/images/Team_Complete.webp" width="800px" alt="DNT team image" /> -->
+    </div><a
+      href="mailto:info@dutchnaoteam.nl"
+      class="mb-16 text-center text-xl dark:text-dnt-orange-400 text-partner-text inline-block"
+      >partnerships@dutchnaoteam.nl</a>
 </div>
