implements PR feedback

--- a/src/components/partnershipsPage/footer.astro
+++ b/src/components/partnershipsPage/footer.astro
@@ -25,7 +25,7 @@ const imsize = 0.5;
             src={partner.logo}
             width={partner.width * imsize}
             height={partner.height * imsize}
-            class="bg-white m-3"
+            class="m-3"
             alt={`@${partner.name}'s logo`}
           />
         </a>
