--- a/src/components/partnershipsPage/introText.astro
+++ b/src/components/partnershipsPage/introText.astro
@@ -21,7 +21,7 @@ import cupSVG from "../../svgs/teacup_line.svg"
         alt="SVG of the world"
         >
         <p class="w-2/3 mt-5">
-          Make meaningfull <span class="text-partner-text">connections</span> by becoming our partner.
+          Make meaningful <span class="text-partner-text">connections</span> by becoming our partner.
           From students to businesses, you will increase the network of your organization.
         </p>
       </div>
@@ -61,7 +61,7 @@ import cupSVG from "../../svgs/teacup_line.svg"
 </div>
 
 <div
-  class="bg-white lg:items-begin flex flex-col items-center justify-center pt-10"
+  class="bg-white lg:items-begin flex flex-col items-center justify-center pt-10 md:px-0 px-10"
 >
     <h1
       class="mb-4 text-center text-5xl font-bold dark:text-dnt-orange-400"
@@ -70,7 +70,7 @@ import cupSVG from "../../svgs/teacup_line.svg"
     </h1>
     <div class="mb-3 flex items-center">
       <h3
-        class="text-center text-3xl dark:text-dnt-orange-400 mr-3"
+        class="text-center text-3xl dark:text-dnt-orange-400 mr-0 md:mr-3"
       >
         Hit us up for a cup of coffee.
       </h3>
