--- a/src/components/navigation/navbar.astro
+++ b/src/components/navigation/navbar.astro
@@ -35,6 +35,12 @@ const navbarLinks: Array<{
     label: "Publications",
   },
   {
+    pattern: new RegExp("^/partnerships"),
+    href: "/partnerships",
+    position: "left",
+    label: "Partnerships",
+  },
+  {
     pattern: new RegExp("^/en"),
     href: "/en/introduction",
     position: "left",
