--- a/src/components/partnershipsPage/partners/partnerContainer.astro
+++ b/src/components/partnershipsPage/partners/partnerContainer.astro
@@ -40,12 +40,14 @@ if (level == PartnerLevels.Platinum) {
       class="text-partner-text underline hover:text-partner-text text-center md:text-left hover:decoration-wavy dark:text-white"
       >partnerships@dutchnaoteam.nl</a
     ></p>
-    {
-      partners.map((partner) => (
-        <div class={levelstyleInner}>
-          <PartnerLogo {...partner} />
-        </div>
-      ))
-    }
+    <div class= `${partners.length == 0 ? "hidden" : " "} dark:bg-white dark:w-full dark:rounded-lg dark:md:w-1/2 content-center  justify-center flex`>
+      {
+        partners.map((partner) => (
+          <div class={levelstyleInner}>
+            <PartnerLogo {...partner} />
+          </div>
+        ))
+      }
+    </div>
   </div>
 </div>
