removes nav buttons

--- a/src/components/partnershipsPage/partnerCarousel.astro
+++ b/src/components/partnershipsPage/partnerCarousel.astro
@@ -6,7 +6,7 @@ import { PartnerListLevel1, PartnerListLevel2, PartnerListLevel3,  PartnerListLe
 
 ---
 <div
-  class="lg:items-begin my-16 items-center justify-center w-full p-10"
+  class="lg:items-begin mt-16 items-center justify-center w-full p-10"
 >
   <h1
   class="mb-2 text-center text-5xl font-bold text-partner-text"
