--- a/src/components/navigation/leftSidebar.astro
+++ b/src/components/navigation/leftSidebar.astro
@@ -61,6 +61,7 @@ if (langCode !== "en") {
   <Search isLanding={isLanding} client:idle />
 </div>
 <div
+  id="mobile-filter-nav"
   dir="ltr"
   class="t3-scrollbar h-full w-full bg-default transition-colors duration-300 lg:mb-12"
 >
