--- a/src/components/landingPage/introText.astro
+++ b/src/components/landingPage/introText.astro
@@ -2,7 +2,7 @@
 ---
 
 <div
-  class="lg:items-begin mx-8 my-16 flex flex-col items-center justify-center gap-8 lg:flex-row"
+  class="lg:items-begin mx-8 md:my-16 my-8 flex flex-col-reverse md:flex-col items-center justify-center gap-8 lg:flex-row"
 >
   <div class="max-w-7xl flex-col lg:max-w-md">
     <h1
