--- a/src/components/navigation/sidebarToggle.astro
+++ b/src/components/navigation/sidebarToggle.astro
@@ -6,7 +6,7 @@
   id="sidebar-toggle"
   type="button"
   aria-pressed="false"
-  class=" md-hidden flex w-fit  gap-3 rounded-full border bg-dnt-orange-200/50 p-3  mb-2 hover:bg-dnt-orange-200/75 dark:border-dnt-orange-200/20 dark:bg-dnt-orange-200/10 dark:hover:border-dnt-orange-200/50 md-hidden"
+  class=" md:hidden flex w-fit gap-3 rounded-full border bg-dnt-orange-200/50 p-3  mb-2 hover:bg-dnt-orange-200/75 dark:border-dnt-orange-200/20 dark:bg-dnt-orange-200/10 dark:hover:border-dnt-orange-200/50"
 >
   Filters
 </button>
@@ -25,16 +25,4 @@
           ? `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 stroke-current" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg><span class="sr-only">Close sidebar</span>`
           : `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 stroke-current" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg><span class="sr-only">Toggle sidebar</span>`;
     }));
-
-  const button2 = document.querySelector("#sidebar-toggle-close");
-
-      button2.addEventListener("click", () => {
-        // eslint-disable-next-line -- html query selector is already defined in the themeToggleButton script
-        const menu = document.querySelector("#mobile-filter-nav");
-        menu.style.display = "none";
-        button2.innerHTML =
-          button2.getAttribute("aria-pressed") === null
-            ? `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 stroke-current fill-transparent" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg><span class="sr-only">Close sidebar</span>`
-            : `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 stroke-current fill-transparent" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg><span class="sr-only">Toggle sidebar</span>`;
-      });
 </script>
