--- a/src/components/navigation/navbar.astro
+++ b/src/components/navigation/navbar.astro
@@ -1,10 +1,6 @@
 ---
 import { clsx } from "clsx";
 import Logo from "./logo.astro"
-import navSVG from "../../utils/menu_fill.svg"
-import closeSVG from "../../utils/close_fill.svg"
-import { checkLanding } from "../../utils/theme";
-import SidebarToggle from "./sidebarToggle.astro";
 import ThemeToggleButton from "./themeToggleButton.astro";
 
 export interface Props {
@@ -12,7 +8,6 @@ export interface Props {
 }
 
 const { pathname } = Astro.url;
-const isLanding = checkLanding(pathname) || !!Astro.props.isNotFound;
 const hasTrailing = pathname.endsWith("/");
 const currentPage = pathname.slice(0, hasTrailing ? -1 : pathname.length);
 // const langCode = getLanguageFromURL(pathname);
@@ -42,12 +37,6 @@ const navbarLinks: Array<{
     href: "/partnerships",
     position: "left",
     label: "Partnerships",
-  },
-  {
-    pattern: new RegExp("^/en"),
-    href: "/en/introduction",
-    position: "left",
-    label: "Docs",
   },
   {
     pattern: new RegExp(
@@ -96,18 +85,40 @@ const navbarLinks: Array<{
       </div>
       <div class="flex flex-grow"></div>
       <div id="nav-icon" class="md:hidden">
-        <img
-        src={navSVG}
-        alt="nav icon open"
+        <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="h-10 w-10 fill-transparent stroke-current"
+        viewBox="0 0 24 24"
         id="nav-open"
-        class=""
         >
-        <img
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M4 6h16M4 12h16M4 18h16">
+          </path>
+        </svg>
+        <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="h-10 w-10 fill-transparent stroke-current hidden"
+        viewBox="0 0 24 24"
+        width="24"
+        height="24"
+        stroke="black"
+        stroke-width="2.2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        id="nav-close"
+        >
+          <line x1="4" y1="4" x2="20" y2="20" />
+          <line x1="20" y1="4" x2="4" y2="20" />
+        </svg>
+        <!-- <img
         src={closeSVG}
         alt="nav icon close"
         id="nav-close"
         class="hidden"
-        >
+        > -->
       </div>
     </div>
     <div class="flex flex-grow items-center justify-end gap-4">
@@ -137,9 +148,6 @@ const navbarLinks: Array<{
 
       <div class="hidden md:block mx-auto">
         <ThemeToggleButton />
-      </div>
-      <div class={clsx([{ hidden: isLanding }])}>
-        <SidebarToggle isLanding={isLanding} />
       </div>
     </div>
   </div>
