--- a/src/components/navigation/sidebarToggle.astro
+++ b/src/components/navigation/sidebarToggle.astro
@@ -1,39 +1,28 @@
 ---
-export interface Props {
-  isLanding: boolean;
-}
+
 ---
 
 <button
   id="sidebar-toggle"
   type="button"
   aria-pressed="false"
-  class="z-20 block text-black dark:text-white md:hidden"
+  class=" md:hidden flex w-fit gap-3 rounded-full border bg-dnt-orange-200/50 p-3  mb-2 hover:bg-dnt-orange-200/75 dark:border-dnt-orange-200/20 dark:bg-dnt-orange-200/10 dark:hover:border-dnt-orange-200/50"
 >
-  <svg
-    xmlns="http://www.w3.org/2000/svg"
-    class="h-10 w-10 fill-transparent stroke-current"
-    viewBox="0 0 24 24"
-  >
-    <path
-      stroke-linecap="round"
-      stroke-linejoin="round"
-      stroke-width="2"
-      d="M4 6h16M4 12h16M4 18h16"></path>
-  </svg>
-  <span class="sr-only">Toggle sidebar</span>
+  Filters
 </button>
 
 <script is:inline>
-  const button = document.querySelector("#sidebar-toggle");
+  const buttons = document.querySelectorAll("#sidebar-toggle");
 
-  button.addEventListener("click", () => {
-    // eslint-disable-next-line -- html query selector is already defined in the themeToggleButton script
-    html.classList.toggle("mobile-sidebar-toggle");
-    button.toggleAttribute("aria-pressed");
-    button.innerHTML =
-      button.getAttribute("aria-pressed") === null
-        ? `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 stroke-current fill-transparent" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg><span class="sr-only">Close sidebar</span>`
-        : `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 stroke-current fill-transparent" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg><span class="sr-only">Toggle sidebar</span>`;
-  });
+  console.log(buttons)
+  buttons.forEach(button => button.addEventListener('click', () => {
+      // eslint-disable-next-line -- html query selector is already defined in the themeToggleButton script
+      html.classList.toggle("mobile-sidebar-toggle");
+      button.toggleAttribute("aria-pressed");
+      menu.style.display = "block";
+      button.innerHTML =
+        button.getAttribute("aria-pressed") === null
+          ? `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 stroke-current" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path></svg><span class="sr-only">Close sidebar</span>`
+          : `<svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 stroke-current" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg><span class="sr-only">Toggle sidebar</span>`;
+    }));
 </script>
