Adds startupvillage as sponsor

--- a/src/components/partnershipsPage/partners/partnerContainer.astro
+++ b/src/components/partnershipsPage/partners/partnerContainer.astro
@@ -10,7 +10,7 @@ export interface Props {
 
 const { partners, level } = Astro.props as Props;
 
-let levelstyleInner = "m-8 dark:bg-white";
+let levelstyleInner = "m-8 flex items-center dark:bg-white";
 let levelstyleOuter = " flex-row justify-center items-center h-3/4";
 let margins = "m-10 mb-24 mt-12";
 let levelName = "Platinum";
