small proportion fix

--- a/src/components/landingPage/introText.astro
+++ b/src/components/landingPage/introText.astro
@@ -2,9 +2,9 @@
 ---
 
 <div
-  class="lg:items-begin mx-8 md:my-16 my-8 flex flex-col-reverse md:flex-col items-center justify-center gap-8 lg:flex-row"
+  class="custom-xl:items-begin mx-8 md:my-16 my-8 flex flex-col-reverse md:flex-col items-center justify-center gap-8 custom-xl:flex-row"
 >
-  <div class="max-w-7xl flex-col lg:max-w-md">
+  <div class="max-w-7xl flex-col custom-xl:max-w-md">
     <h1
       class="mb-2 text-4xl font-bold text-dnt-orange-500 dark:text-dnt-orange-400"
     >
