Adds info to join

--- a/src/components/navigation/navbar.astro
+++ b/src/components/navigation/navbar.astro
@@ -43,7 +43,7 @@ const navbarLinks: Array<{
       "^\b$" /* dont want the join button to appear selected */
     ),
     position: "right",
-    href: "https://join.dutchnao.team/",
+    href: "/roleinformation",
     label: "Join us",
   },
 ];
